# algorithm_learning

./: README.md
Template_cpp/: CMakeLists.txt  main.cpp
basic_algorithm/BasicMath/: BasicMath.cpp  BasicMath.h  main.cpp
basic_algorithm/Geometry/: Geometry.cpp  Geometry.h  Geometry2d.cpp  Geometry2d.h  Geometry3d.cpp  Geometry3d.h  GeometryDefine.h  main.cpp
topcoder/DynamicProgramming/AvoidRoads/: main.c  main.c_recursive  makefile
topcoder/DynamicProgramming/BadNeighbors/: main.c  makefile
topcoder/DynamicProgramming/ChessMetric/: main.c  makefile
topcoder/DynamicProgramming/FlowerGarden/: main.c  makefile
topcoder/DynamicProgramming/Jewelry/: main.cpp  makefile
topcoder/DynamicProgramming/MiniPaint/: main.cpp  makefile  my.cpp
topcoder/DynamicProgramming/QuickSums/: main.c  makefile
topcoder/DynamicProgramming/ShortPalindromes/: main.cpp  makefile
topcoder/DynamicProgramming/StarAdventure/: answer.cpp  answer.java  main.cpp  makefile
topcoder/DynamicProgramming/StripePainter/: main.c  makefile
topcoder/DynamicProgramming/ZigZagSequence/: main.c  makefile
topcoder/Geometry/PointInPolygon/: CMakeLists.txt  main.cpp
topcoder/TopCoderProblemTemplate_c/: main.c  makefile
topcoder/TopCoderProblemTemplate_cpp/: CMakeLists.txt  main.cpp  makefile
